--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="./favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>client</title>
+    <meta name="description" content="A place to create your RPG character" />
+    <title>Character Creation</title>
   </head>
   <body>
     <div id="root"></div>
